--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "mongoose": "^9.1.3",
     "next": "16.1.1",
     "react": "19.2.3",
